<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <com.gaelanbolger.woltile.widget.TileView
        android:id="@+id/tile_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_laptop_general"
        android:text="@string/tile_1"
        app:layout_constraintBottom_toTopOf="@id/tile_4"
        app:layout_constraintEnd_toStartOf="@id/tile_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gaelanbolger.woltile.widget.TileView
        android:id="@+id/tile_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_laptop_general"
        android:text="@string/tile_2"
        app:layout_constraintBottom_toTopOf="@id/tile_5"
        app:layout_constraintEnd_toStartOf="@id/tile_3"
        app:layout_constraintStart_toEndOf="@id/tile_1"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gaelanbolger.woltile.widget.TileView
        android:id="@+id/tile_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_laptop_general"
        android:text="@string/tile_3"
        app:layout_constraintBottom_toTopOf="@id/tile_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tile_2"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gaelanbolger.woltile.widget.TileView
        android:id="@+id/tile_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_laptop_general"
        android:text="@string/tile_4"
        app:layout_constraintBottom_toTopOf="@id/tile_7"
        app:layout_constraintEnd_toStartOf="@id/tile_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tile_1" />

    <com.gaelanbolger.woltile.widget.TileView
        android:id="@+id/tile_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_laptop_general"
        android:text="@string/tile_5"
        app:layout_constraintBottom_toTopOf="@id/tile_8"
        app:layout_constraintEnd_toStartOf="@id/tile_6"
        app:layout_constraintStart_toEndOf="@id/tile_4"
        app:layout_constraintTop_toBottomOf="@id/tile_2" />

    <com.gaelanbolger.woltile.widget.TileView
        android:id="@+id/tile_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_laptop_general"
        android:text="@string/tile_6"
        app:layout_constraintBottom_toTopOf="@id/tile_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tile_5"
        app:layout_constraintTop_toBottomOf="@id/tile_3" />

    <com.gaelanbolger.woltile.widget.TileView
        android:id="@+id/tile_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_laptop_general"
        android:text="@string/tile_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tile_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tile_4" />

    <com.gaelanbolger.woltile.widget.TileView
        android:id="@+id/tile_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_laptop_general"
        android:text="@string/tile_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tile_9"
        app:layout_constraintStart_toEndOf="@id/tile_7"
        app:layout_constraintTop_toBottomOf="@id/tile_5" />

    <com.gaelanbolger.woltile.widget.TileView
        android:id="@+id/tile_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_laptop_general"
        android:text="@string/tile_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tile_8"
        app:layout_constraintTop_toBottomOf="@id/tile_6" />
</android.support.constraint.ConstraintLayout>